Fix list item overlapping in filter dropdown

--- a/indico/htdocs/sass/partials/object-lists.scss
+++ b/indico/htdocs/sass/partials/object-lists.scss
@@ -208,13 +208,16 @@
         min-width: 12em;
         box-sizing: border-box;
 
-        > li > label {
-            color: $black;
-            margin-left: 0.5em;
-            line-height: 2;
-            height: 2em;
-            vertical-align: middle;
-            cursor: pointer;
+        > li {
+            display: flex;
+            align-items: center;
+
+            > label {
+                color: $black;
+                margin-left: 0.5em;
+                vertical-align: middle;
+                cursor: pointer;
+            }
         }
     }
 
